--- a/config/storage.yml
+++ b/config/storage.yml
@@ -14,12 +14,11 @@ local:
 #   region: us-east-1
 #   bucket: your_own_bucket
 
-# Remember not to checkin your GCS keyfile to a repository
-# google:
-#   service: GCS
-#   project: your_project
-#   credentials: <%= Rails.root.join("path/to/gcs.keyfile") %>
-#   bucket: your_own_bucket
+ google:
+   service: GCS
+   project: QnA Cloud
+   credentials: <%= Rails.root.join("config/creds/qna.json") %>
+   bucket: qna_bucket_vladmit
 
 # Use rails credentials:edit to set the Azure Storage secret (as azure_storage:storage_access_key)
 # microsoft:
